src/.yale/kubernetes/test2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-external-service
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
    - proocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 35010
