src/.yale/kubernetes/test2/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules: 
  - host: dashboard.com
    http:
      paths:
        - path: /dashboard
          pathType: Prefix
          backend:
            # serviceName: kubernetes-dashboard
            # servicePort: 80
            service:
              name: kubernetes-dashboard
              port: 
                number: 80
