src/.yale/kubernetes/test2/my-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: usecase
spec:
